TestSuite/Verification/Error/Serial/Inlining/DoNotInlineTest.par
DoNotInlineTest{

seq toInline(Int input) : Int {
    return input
}

seq main() : Int {
    var Int a = 2
    
    toInline(a)
    
return 0 
}}